LayoutTests:

Reviewed by Geoff.

        <rdar://problem/4993463>
        http://bugs.webkit.org/show_bug.cgi?id=12732
        REGRESSION: Comments fields on ircimages not showing up in nightly

        * fast/frames/iframe-set-inner-html-expected.txt: Added.
        * fast/frames/iframe-set-inner-html.html: Added.

WebCore:

        Reviewed by Geoff.

        <rdar://problem/4993463>
        http://bugs.webkit.org/show_bug.cgi?id=12732
        REGRESSION: Comments fields on ircimages not showing up in nightly

        Postpone setting the frame name to just right before we request the frame. Otherwise,
        two calls to FrameTree::uniqueChildName will return the same frame name and in that case only
        one Frame object will actually be created and multiple iframe elements will refer to it.

        * html/HTMLFrameElementBase.cpp:
        (WebCore::HTMLFrameElementBase::openURL):
        (WebCore::HTMLFrameElementBase::setNameAndOpenURL):
        (WebCore::HTMLFrameElementBase::setNameAndOpenURLCallback):
        (WebCore::HTMLFrameElementBase::insertedIntoDocument):
        (WebCore::HTMLFrameElementBase::attach):
        * html/HTMLFrameElementBase.h:



Canonical link: https://commits.webkit.org/19048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24396 268f45cc-cd09-0410-ab3c-d52691b4dbfc